--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,32 +1,1 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === open">
-    <mat-toolbar>MyPetShow</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item [routerLink]="['/login']" >Login</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async;else menu">
-        <img src="/assets/pngegg (1).png" alt="" class="imgMenu">
-      </button>
-      <div class="menuFlex">
-        <ng-template  #menu>
-          <img (click)="changeOpen()" src="/assets/pngegg (1).png" alt="" class="imgMenu">
-          <p> MyPetShow </p>
-        </ng-template>
-      </div>
-    </mat-toolbar>
-   <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<p  class="color-change-2x">navbar works!</p>
