--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,13 +1,13 @@
-<div  *ngIf="arrayimg" class="centralizado">
+<div  *ngIf="arrayimg" >
   <div>
-    <div class="position-absolute top-0 start-0 botoesLogin">
+    <div class="position-absolute top-0 start-0 botoesLogin logocolor">
       <img src="assets/pngegg (1).png" width="40px" height="40px" alt="" />
       <h2>MyPet Show</h2>
     </div>
     <div
-      class="container cadastro position-absolute posicao translate-middle"
+      class="container cadastro posicao"
     >
-      <div  class="cadastro1 scale-up-center">
+      <div  class="cadastro1 scale-up-center ">
         <mat-tab-group mat-align-tabs="center">
           <mat-tab label="Login">
             <div class="container">
